--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "less": "^4.4.0",
+    "less-loader": "^12.3.0",
+    "mini-css-extract-plugin": "^2.9.3",
     "sass": "^1.90.0",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "clean-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.6.3"
   },
   "private": true,
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "start": "webpack serve --mode development --open"
   }
 }
