--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
     "css-loader": "^7.1.2",
+    "eslint-webpack-plugin": "^5.0.2",
     "less": "^4.4.0",
     "less-loader": "^12.3.0",
     "mini-css-extract-plugin": "^2.9.3",
     "sass": "^1.90.0",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.101.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
     "axios": "^1.11.0",
     "clean-webpack-plugin": "^4.0.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.6.3"
   },
@@ -22,6 +27,7 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "start": "webpack serve --mode development --open"
+    "start": "webpack serve --mode development --open",
+    "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json dist/"
   }
 }
